force-app/main/default/objects/CWS_Country_Territory_Region_Mapping__mdt/CWS_Country_Territory_Region_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping will be used to Populated Territory and Region based on Country/State/ZipCode.</description>
    <label>Country Territory Region Mapping</label>
    <pluralLabel>Country Territory Region Mappings</pluralLabel>
</CustomObject>