force-app/main/default/objects/CWS_Country_Territory_Region_Mapping__mdt/fields/CWS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>