force-app/main/default/objects/CWS_Country_Territory_Region_Mapping__mdt/fields/CWS_State__c.field-meta.xml
<CustomField>
    <fullName>CWS_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>