force-app/main/default/objects/CWS_Country_Territory_Region_Mapping__mdt/fields/CWS_Territory__c.field-meta.xml
<CustomField>
    <fullName>CWS_Territory__c</fullName>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>